fix(ui): add /concepts in workflow docs URL
Signed-off-by: François Magimel <francois.magimel@ovhcloud.com>

--- a/ui/src/app/shared/workflow/wizard/node-add/node.wizard.html
+++ b/ui/src/app/shared/workflow/wizard/node-add/node.wizard.html
@@ -29,7 +29,7 @@
                                     </nz-form-item>
                                     <nz-form-item>
                                         <nz-form-label>
-                                            <a href="#" [routerLink]="['/docs', 'docs', 'workflow', 'mutex']" target="_blank" rel="noopener noreferrer">
+                                            <a href="#" [routerLink]="['/docs', 'docs', 'concepts', 'workflow', 'mutex']" target="_blank" rel="noopener noreferrer">
                                                 {{ 'workflow_root_context_mutex' | translate }}
                                                 <span nz-icon nzType="link" nzTheme="outline"></span>
                                             </a>
@@ -56,7 +56,7 @@
                                     <nz-alert nzType="error" *ngIf="errorPipelineNamePattern" nzMessage="Invalid pipeline name. Allowed pattern is: a-zA-Z0-9._-"></nz-alert>
                                     <nz-form-item>
                                         <nz-form-label>
-                                            <a href="#" [routerLink]="['/docs', 'docs', 'workflow', 'mutex']" target="_blank" rel="noopener noreferrer">
+                                            <a href="#" [routerLink]="['/docs', 'docs', 'concepts', 'workflow', 'mutex']" target="_blank" rel="noopener noreferrer">
                                                 {{ 'workflow_root_context_mutex' | translate }}
                                                 <span nz-icon nzType="link" nzTheme="outline"></span>
                                             </a>
