--- a/ui/src/app/shared/workflow/wizard/outgoinghook/wizard.outgoinghook.html
+++ b/ui/src/app/shared/workflow/wizard/outgoinghook/wizard.outgoinghook.html
@@ -1,7 +1,7 @@
 <form nz-form>
     <div class="link">
         <i nz-icon nzType="book" nzTheme="outline"></i>
-        <a href="#" [routerLink]="['/docs', 'docs', 'workflow', 'hooks']" target="_blank"
+        <a href="#" [routerLink]="['/docs', 'docs', 'concepts', 'workflow', 'hooks']" target="_blank"
                                     rel="noopener noreferrer">{{'common_documentation' | translate}}</a>
     </div>
     <h3>Hook configuration</h3>
