feat(ui): cursor pointer on ng router link
Signed-off-by: Léo Rolland <rolland.leo@orange.fr>

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -557,3 +557,7 @@ foreignObject {
 .bottomBtnsWrapper {
     z-index: 5; // an index to be over all codemirror elements
 }
+
+[ng-reflect-router-link] {
+  cursor: pointer;
+}
