feat(ui): manage array jsonschema form generation

--- a/ui/src/app/shared/entity/entity.form.component.scss
+++ b/ui/src/app/shared/entity/entity.form.component.scss
@@ -6,6 +6,8 @@
 
     app-json-form {
         flex: 1;
+        overflow: hidden;
+        overflow-y: auto;
 
         &.disableSelection {
             user-select: none;
