--- a/ui/src/app/shared/entity/form/form-item/json-form-field.html
+++ b/ui/src/app/shared/entity/form/form-item/json-form-field.html
@@ -18,29 +18,54 @@
     </ng-template>
 </ng-container>
 
+<!-- ARRAY -->
 <ng-container *ngIf="field && currentModel && jsonFormSchema && field.type === 'array'">
     <h3>{{field.name.charAt(0).toUpperCase() + field.name.substring(1, field.name.length)}}</h3>
-    <ng-container *ngFor="let arrayItem of currentModel[field.name]; let index = index">
-        -----------------------------------<br/>
-        <ng-container *ngFor="let f of jsonFormSchema.types[field.objectType].fields">
-            <app-json-form-field [parentType]="field.objectType" [jsonFormSchema]="jsonFormSchema" [field]="f"
-                                 [model]="currentModel[field.name][index]" (modelChange)="onValueChanged($event)"></app-json-form-field>
-        </ng-container>
-    </ng-container>
+    <div class="array-container" *ngFor="let arrayItem of currentModel[field.name]; trackBy: trackStepElement; let index = index">
+        <div class="array-item">
+            <ng-container *ngIf="oneOf">
+                <div class="array-select">
+                    <nz-form-item>
+                        <nz-form-control>
+                            <nz-select [(ngModel)]="oneOfSelected[index]" (ngModelChange)="updateItemStruct(index)">
+                                <nz-option *ngFor="let o of oneOfSelectOpts" [nzLabel]="o" [nzValue]="o"></nz-option>
+                            </nz-select>
+                        </nz-form-control>
+                    </nz-form-item>
+                    <div class="array-select-key-form">
+                        <app-json-form-field [hideLabel]="true" [parentType]="field.objectType"
+                                             [jsonFormSchema]="jsonFormSchema" [field]="oneOf.get(oneOfSelected[index]).keyFormItem"
+                                             [model]="currentModel[field.name][index]" (modelChange)="onValueChanged($event, index)"></app-json-form-field>
+                    </div>
+                </div>
+                <div class="array-form">
+                    <app-json-form-field *ngFor="let f of oneOf.get(oneOfSelected[index]).fields"
+                        [hideLabel]="f.name === oneOfSelected[index]"
+                        [parentType]="field.objectType" [jsonFormSchema]="jsonFormSchema" [field]="f"
+                        [model]="currentModel[field.name][index]" (modelChange)="onValueChanged($event, index)"></app-json-form-field>
+                </div>
+            </ng-container>
+            <ng-container *ngIf="!oneOf">
+                <!-- NOT IMPLEMENTED : ARRAY WITHOUT ONEOF -->
+            </ng-container>
+        </div>
+    </div>
+    <button nz-button nzType="default" nzBlock (click)="addArrayItem()">Add</button>
 </ng-container>
 
+<!-- MAP -->
 <ng-container *ngIf="field && currentModel && jsonFormSchema && field.type === 'map'">
-    map
+    <h3>{{field.name.charAt(0).toUpperCase() + field.name.substring(1, field.name.length)}}</h3>
 </ng-container>
 
-<!-- SIMPLE FIELD -->
+<!-- SIMPLE FIELD (number / string) -->
 <nz-form-item *ngIf="field && currentModel && jsonFormSchema && field.type !== 'object' && field.type !== 'array' && field.type !== 'map'">
     <!-- FORM LABEL -->
-    <nz-form-label nzFlex="120px">
-        <span *ngIf="required" class="red">{{ '* '}}</span>
-        {{field.name.charAt(0).toUpperCase() + field.name.substring(1, field.name.length)}}
-        <i *ngIf="field?.description" nz-icon nzType="info-circle" nzTheme="outline"
-            [nz-tooltip]="field?.description"></i>
+    <nz-form-label nzFlex="120px" *ngIf="!hideLabel">
+            <span *ngIf="required" class="red">{{ '* '}}</span>
+            {{field.name.charAt(0).toUpperCase() + field.name.substring(1, field.name.length)}}
+            <i *ngIf="field?.description" nz-icon nzType="info-circle" nzTheme="outline"
+               [nz-tooltip]="field?.description"></i>
     </nz-form-label>
 
     <!-- FORM VALUE -->
