--- a/ui/src/app/shared/entity/form/form-item/json-form-field.scss
+++ b/ui/src/app/shared/entity/form/form-item/json-form-field.scss
@@ -7,8 +7,9 @@ i {
     color: $cds_color_red;
 }
 
-.array-container {
+.item-container {
     border: 1px #D9D9D9 dashed;
+
     padding: 20px;
     margin-bottom: 10px;
 
@@ -24,11 +25,23 @@ i {
                     width: 110px;
                 }
             }
-
             .array-select-key-form {
-                width: 100%;
+                flex: 1;
                 margin-left: 10px;
             }
+        }
+    }
+
+    .map-item {
+        display: flex;
+        flex-direction: row;
+
+        .map-key {
+            width: 200px;
+        }
+        .map-value {
+            flex: 1;
+            margin-left: 10px;
         }
     }
 }
