--- a/ui/src/app/shared/entity/form/form-item/json-form-field.scss
+++ b/ui/src/app/shared/entity/form/form-item/json-form-field.scss
@@ -7,10 +7,14 @@ i {
     color: $cds_color_red;
 }
 
+.array-field, .map-field {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 .item-container {
     border: 1px #D9D9D9 dashed;
 
-    padding: 20px;
+    padding: 20px 20px 0 20px;
     margin-bottom: 10px;
 
     .array-item {
@@ -29,6 +33,21 @@ i {
                 flex: 1;
                 margin-left: 10px;
             }
+        }
+
+        .deleteItem {
+            display: none;
+
+            button {
+                margin-left: auto;
+                margin-bottom: 20px;
+            }
+        }
+    }
+
+    .array-item:hover {
+        .deleteItem {
+            display: flex;
         }
     }
 
