--- a/ui/src/app/shared/entity/form/form-item/json-form-field.html
+++ b/ui/src/app/shared/entity/form/form-item/json-form-field.html
@@ -5,27 +5,99 @@
         <ng-container *ngIf="selectedCondition">
             <app-json-form-field *ngFor="let f of jsonFormSchema.types[selectedCondition.type].fields"
                 [disabled]="disabled" [parentType]="selectedCondition.type" [jsonFormSchema]="jsonFormSchema"
-                [field]="f" [model]="currentModel[field.name]"
+                [field]="f" [model]="currentModel[field.name]" [entityType]="entityType"
                 (modelChange)="onValueChanged($event)"></app-json-form-field>
         </ng-container>
         <nz-alert *ngIf="!selectedCondition" nzType="info"
             nzDescription="Please select a value for field '{{conditionRefProperties}}'" nzShowIcon></nz-alert>
     </ng-container>
     <ng-template #tmplNoCondition>
-        <app-json-form-field *ngFor="let f of jsonFormSchema.types[field.objectType].fields"
-            [parentType]="field.objectType" [jsonFormSchema]="jsonFormSchema" [field]="f"
-            [model]="currentModel[field.name]" (modelChange)="onValueChanged($event)"></app-json-form-field>
+        <ng-container *ngFor="let f of jsonFormSchema.types[field.objectType].fields">
+            <app-json-form-field
+                [parentType]="field.objectType" [jsonFormSchema]="jsonFormSchema" [field]="f" [entityType]="entityType"
+                [model]="currentModel[field.name]" (modelChange)="onValueChanged($event)"></app-json-form-field>
+        </ng-container>
+
     </ng-template>
 </ng-container>
 
-<!-- SIMPLE FIELD -->
-<nz-form-item *ngIf="field && currentModel && jsonFormSchema && field.type !== 'object'">
+<!-- ARRAY -->
+<div class="array-field" *ngIf="field && currentModel && jsonFormSchema && field.type === 'array'">
+    <h3>{{field.name.charAt(0).toUpperCase() + field.name.substring(1, field.name.length)}}</h3>
+    <div class="item-container" *ngFor="let arrayItem of currentModel[field.name]; trackBy: trackByIndex; let index = index">
+        <div class="array-item">
+            <ng-container *ngIf="oneOf">
+                <div class="array-select">
+                    <nz-form-item>
+                        <nz-form-control>
+                            <nz-select class="oneof" [(ngModel)]="oneOfSelected[index]" (ngModelChange)="updateItemStruct(index)">
+                                <nz-option *ngFor="let o of oneOfSelectOpts" [nzLabel]="o" [nzValue]="o"></nz-option>
+                            </nz-select>
+                        </nz-form-control>
+                    </nz-form-item>
+                    <div class="array-select-key-form">
+                        <app-json-form-field [hideLabel]="true" [parentType]="field.objectType" [entityType]="entityType"
+                                             [jsonFormSchema]="jsonFormSchema" [field]="oneOf.get(oneOfSelected[index]).keyFormItem"
+                                             [model]="currentModel[field.name][index]" (modelChange)="onValueChanged($event, index)"></app-json-form-field>
+                    </div>
+                </div>
+                <div class="array-form">
+                    <ng-container *ngFor="let f of oneOf.get(oneOfSelected[index]).fields">
+                        <app-json-form-field [hideLabel]="f.name === oneOfSelected[index]" [entityType]="entityType"
+                                             [parentType]="field.objectType" [jsonFormSchema]="jsonFormSchema" [field]="f"
+                                             [model]="currentModel[field.name][index]" (modelChange)="onValueChanged($event, index)"></app-json-form-field>
+                    </ng-container>
+                </div>
+            </ng-container>
+            <ng-container *ngIf="!oneOf">
+                <!-- NOT IMPLEMENTED : ARRAY WITHOUT ONEOF -->
+            </ng-container>
+        </div>
+    </div>
+    <button nz-button nzType="default" nzBlock (click)="addArrayItem()">Add</button>
+</div>
+
+<!-- MAP -->
+<div class="map-field" *ngIf="field && currentModel && jsonFormSchema && field.type === 'map'">
+    <h3>{{field.name.charAt(0).toUpperCase() + field.name.substring(1, field.name.length)}}</h3>
+    <div class="item-container" *ngFor="let item of currentModel[field.name] | keyvalue; trackBy: trackByIndex">
+        <div class="map-item">
+            <div class="map-key">
+                <nz-form-item>
+                    <nz-form-label *ngIf="field.mode === 'use'">{{item.key}}</nz-form-label>
+                    <nz-form-control nzErrorTip="Pattern should match {{field.keyMapPattern}}" *ngIf="field.keyMapType === 'string' && field.mode === 'edit'">
+                            <input nz-input [name]="field.name + '-' + item.key" [disabled]="disabled"
+                                   [pattern]="field.keyMapPattern"
+                                   [ngModel]="item.key" (ngModelChange)="onKeyMapChanged($event, item.key)">
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+
+            <div class="map-value">
+                <ng-container *ngIf="field.objectType === 'string'; else mapObj">
+                    <input nz-input [name]="field.name+'-value-' + item.key" [disabled]="disabled"
+                           [ngModel]="currentModel[field.name][item.key]" (ngModelChange)="onValueChanged($event, item.key)">
+                </ng-container>
+                <ng-template #mapObj>
+                    <app-json-form-field *ngFor="let f of jsonFormSchema.types[field.objectType].fields" [entityType]="entityType"
+                        [parentType]="field.objectType" [jsonFormSchema]="jsonFormSchema" [field]="f"
+                        [model]="currentModel[field.name][item.key]" (modelChange)="onValueChanged($event, item.key)"></app-json-form-field>
+                </ng-template>
+            </div>
+        </div>
+    </div>
+    <nz-alert *ngIf="!currentModel[field.name] || currentModel[field.name].length === 0" nzMessage="No inputs this action" nzType="info"></nz-alert>
+    <button nz-button nzType="default" nzBlock (click)="addMapItem()" *ngIf="field.mode === 'edit'">Add</button>
+</div>
+
+<!-- SIMPLE FIELD (number / string) -->
+<nz-form-item *ngIf="field && currentModel && jsonFormSchema && field.type !== 'object' && field.type !== 'array' && field.type !== 'map'">
     <!-- FORM LABEL -->
-    <nz-form-label nzFlex="120px">
-        <span *ngIf="required" class="red">{{ '* '}}</span>
-        {{field.name.charAt(0).toUpperCase() + field.name.substring(1, field.name.length)}}
-        <i *ngIf="field?.description" nz-icon nzType="info-circle" nzTheme="outline"
-            [nz-tooltip]="field?.description"></i>
+    <nz-form-label nzFlex="120px" *ngIf="!hideLabel">
+            <span *ngIf="required" class="red">{{ '* '}}</span>
+            {{field.name.charAt(0).toUpperCase() + field.name.substring(1, field.name.length)}}
+            <i *ngIf="field?.description" nz-icon nzType="info-circle" nzTheme="outline"
+               [nz-tooltip]="field?.description"></i>
     </nz-form-label>
 
     <!-- FORM VALUE -->
