--- a/ui/src/app/shared/entity/form/form-item/json-form-field.scss
+++ b/ui/src/app/shared/entity/form/form-item/json-form-field.scss
@@ -6,3 +6,46 @@ i {
 .red {
     color: $cds_color_red;
 }
+
+.array-field, .map-field {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.item-container {
+    border: 1px #D9D9D9 dashed;
+
+    padding: 20px 20px 0 20px;
+    margin-bottom: 10px;
+
+    .array-item {
+        display: flex;
+        flex-direction: column;
+
+        .array-select {
+            display: flex;
+
+            nz-form-item {
+                nz-select.oneof {
+                    width: 110px;
+                }
+            }
+            .array-select-key-form {
+                flex: 1;
+                margin-left: 10px;
+            }
+        }
+    }
+
+    .map-item {
+        display: flex;
+        flex-direction: row;
+
+        .map-key {
+            width: 200px;
+        }
+        .map-value {
+            flex: 1;
+            margin-left: 10px;
+        }
+    }
+}
