refactor(docs): get dependencies from npm
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/docs/layouts/partials/head.html
+++ b/docs/layouts/partials/head.html
@@ -28,19 +28,18 @@
 <meta name="twitter:title" content="{{ if .Params.title }}{{ .Title }}{{ else }}{{ .Summary | truncate 10 }}{{ end }}">
 <meta name="twitter:image:alt" content="{{ site.Title }}">
 <meta property="og:image" content="{{ "images/cds-transparent.png" | relURL }}">
-<script type="text/javascript" src="{{ "js/anchor-4.1.1.min.js" | relURL }}"></script>
-<script type="text/javascript" src="{{ "js/jquery-3.2.1.min.js" | relURL }}"></script>
-<script type="text/javascript" src="{{ "js/jquery-ui-1.12.1.min.js" | relURL }}"></script>
-<script type="text/javascript" src="{{ "js/bootstrap-3.3.7.min.js" | relURL }}"></script>
+<script type="text/javascript" src="{{ "js/anchor.min.js" | relURL }}"></script>
+<script type="text/javascript" src="{{ "js/jquery.min.js" | relURL }}"></script>
+<script type="text/javascript" src="{{ "js/jquery-ui.min.js" | relURL }}"></script>
+<script type="text/javascript" src="{{ "js/bootstrap.min.js" | relURL }}"></script>
 <script type="text/javascript" src="{{ "js/highlight.pack.js" | relURL}}"></script>
 <script>
     hljs.initHighlightingOnLoad();
-
 </script>
 <script type="text/javascript" src="{{ "js/script.js" | relURL }}"></script>
 <script type="text/javascript" src="{{ "js/lunr.min.js" | relURL}}"></script>
 <a id="indexJSON" href="{{ "./index.json" | relURL}}"></a>
 
-<script type="text/javascript" src="{{ "js/auto-complete.js" | relURL}}"></script>
+<script type="text/javascript" src="{{ "js/auto-complete.min.js" | relURL}}"></script>
 <script type="text/javascript" src="{{ "js/search.js" | relURL}}"></script>
-<script type="text/javascript" src="{{ "js/asciinema-player.js" | relURL}}"></script>
+<script type="text/javascript" src="{{ "js/asciinema-player.min.js" | relURL}}"></script>
