--- a/ui/src/app/views/projectv2/vcs/repository/action/show/project.action.show.scss
+++ b/ui/src/app/views/projectv2/vcs/repository/action/show/project.action.show.scss
@@ -7,7 +7,7 @@
     app-entity {
         flex: 1;
         width: 100%;
-        overflow-y: hidden;
+        overflow: hidden;
     }
 
     .footer {
